--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
                 <version>4.0</version>
             </dependency>
 
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>2.3</version>
+            </dependency>
+
             <!-- ##### google ##### -->
             <dependency>
                 <groupId>com.google.code.gson</groupId>
