--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>stock-common</module>
         <module>stock-domain</module>
         <module>stock-ml</module>
+        <module>stock-assemble</module>
     </modules>
 
 
@@ -165,6 +166,11 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-source-plugin</artifactId>
                     <version>2.1.2</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>3.0.2</version>
                 </plugin>
             </plugins>
         </pluginManagement>
