--- a/stock-core/pom.xml
+++ b/stock-core/pom.xml
@@ -59,11 +59,11 @@
             <version>1.3.0</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.alibaba.geabase</groupId>
-            <artifactId>myqueue-java-core</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.alibaba.geabase</groupId>-->
+            <!--<artifactId>myqueue-java-core</artifactId>-->
+            <!--<version>1.0.0-SNAPSHOT</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>com.google.protobuf</groupId>
